# c_practice

./: README.md  arith  arith.c  exercise1.c
CO_HW1/CO_StudentID_HW1/: 2  3  array_search.c  array_sort.c  linked_list_sort.c
CO_HW2/E94126054_HW2/: exercise2_1.c  exercise3_1.c  fft.h  fft_input.txt  macro_define.h
CO_StudentID_HW0/: arith.c  array_arith.c
CO_StudentID_HW2/CO_StudentID_HW2/: arraymul.h  arraymul_baseline.c  bit_reverse.c  complex_add.c  complex_mul.c  complex_sub.c  exercise2_1.c  macro_define.h
InventorySyste/src/: Character.cpp  Character.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Potion.cpp  Potion.h  README.md  Weapon.cpp  (+3 more)
MyOpenGLProject/: CMakeLists.txt  README.md  三角形實作教學.md  參考資料.md  除錯日記.md
MyOpenGLProject/src/: main.cpp
NCKUES_Lab/: git_instruction.md
Practice/: 2D_array.c++  B_Minesweeper.c++  Creating_Strings.c++  D_train.c++  Lab1_struct.v  Lyklagangriti.c++  PB.c++  PC.c++  PC_card.c++  PE.c++  Pointer_practice.c++  backspace_string_compare.c++  contains_duplicate.c++  example.v  increasing_array_queries.c++  intersection_of_two_array.c++  lab2.v  lab3_1.v  lab3_2.v  lab4.v  linked_list.c++  linklist.c++  linklist_stack.c++  nineknight.c++  pascal.c++  plane.h  pq.c++  practice_queue.c++  practice_stack.c++  recursive_knight_tour.c++  student_link.c++  summary_ranges.c++  tetris_game.c++  texxxxt.c++  tree_example.c++  tree_example_use_array.c++
SHOP/: main.cpp  shop.cpp  shop.h
lecture/: FunctionOverloading.cpp  Improve Quadratic.cpp  Quadratic Equation.cpp  StructureExam.cpp  type.cpp
login_system/: README.md
(+81 files in other folders)
